# team-aipulse

./: README.md
kyc_automation/: README.md  pyproject.toml
kyc_automation/src/kyc_automation/: .env  crew.py  main.py
kyc_automation/src/kyc_automation/config/: agents.yaml  tasks.yaml
kyc_automation/src/kyc_automation/tools/: custom_tool.py
