[project]
name = "kyc_automation"
version = "0.1.0"
description = "kyc_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
kyc_automation = "kyc_automation.main:run"
run_crew = "kyc_automation.main:run"
train = "kyc_automation.main:train"
replay = "kyc_automation.main:replay"
test = "kyc_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
